Remove raw types and clean some code