@@ -16,73 +16,42 @@ import com.ibm.wsdl.util.xml.*;
 /**
  * @author Matthew J. Duftler (duftler@us.ibm.com)
  */
-public class HTTPAddressSerializer implements ExtensionSerializer,
-                                              ExtensionDeserializer,
-                                              Serializable
-{
+public class HTTPAddressSerializer implements ExtensionSerializer, ExtensionDeserializer, Serializable {
   public static final long serialVersionUID = 1;
 
-  public void marshall(Class parentType,
-                       QName elementType,
-                       ExtensibilityElement extension,
-                       PrintWriter pw,
-                       Definition def,
-                       ExtensionRegistry extReg)
-                         throws WSDLException
-  {
-    HTTPAddress httpAddress = (HTTPAddress)extension;
+  public void marshall(Class<?> parentType, QName elementType, ExtensibilityElement extension, PrintWriter pw, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    HTTPAddress httpAddress = (HTTPAddress) extension;
 
-    if (httpAddress != null)
-    {
-      String tagName =
-        DOMUtils.getQualifiedValue(HTTPConstants.NS_URI_HTTP,
-                                   "address",
-                                   def);
+    if (httpAddress != null) {
+      String tagName = DOMUtils.getQualifiedValue(HTTPConstants.NS_URI_HTTP, "address", def);
 
       pw.print("      <" + tagName);
 
-      DOMUtils.printAttribute(Constants.ATTR_LOCATION,
-                              httpAddress.getLocationURI(),
-                              pw);
+      DOMUtils.printAttribute(Constants.ATTR_LOCATION, httpAddress.getLocationURI(), pw);
 
       Boolean required = httpAddress.getRequired();
 
-      if (required != null)
-      {
-        DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED,
-                                         required.toString(),
-                                         def,
-                                         pw);
+      if (required != null) {
+        DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED, required.toString(), def, pw);
       }
 
       pw.println("/>");
     }
   }
 
-  public ExtensibilityElement unmarshall(Class parentType,
-                                         QName elementType,
-                                         Element el,
-                                         Definition def,
-                                         ExtensionRegistry extReg)
-                                           throws WSDLException
-	{
-    HTTPAddress httpAddress = (HTTPAddress)extReg.createExtension(parentType,
-                                                                  elementType);
+  public ExtensibilityElement unmarshall(Class<?> parentType, QName elementType, Element el, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    HTTPAddress httpAddress = (HTTPAddress) extReg.createExtension(parentType, elementType);
     String locationURI = DOMUtils.getAttribute(el, Constants.ATTR_LOCATION);
-    String requiredStr = DOMUtils.getAttributeNS(el,
-                                                 Constants.NS_URI_WSDL,
-                                                 Constants.ATTR_REQUIRED);
+    String requiredStr = DOMUtils.getAttributeNS(el, Constants.NS_URI_WSDL, Constants.ATTR_REQUIRED);
 
-    if (locationURI != null)
-    {
+    if (locationURI != null) {
       httpAddress.setLocationURI(locationURI);
     }
 
-    if (requiredStr != null)
-    {
-      httpAddress.setRequired(new Boolean(requiredStr));
+    if (requiredStr != null) {
+      httpAddress.setRequired(Boolean.valueOf(requiredStr));
     }
 
     return httpAddress;
-	}
+  }
 }
