@@ -17,33 +17,16 @@ import com.ibm.wsdl.util.xml.*;
 /**
  * @author Matthew J. Duftler (duftler@us.ibm.com)
  */
-public class MIMEMultipartRelatedSerializer implements ExtensionSerializer,
-                                                       ExtensionDeserializer,
-                                                       Serializable
-{
+public class MIMEMultipartRelatedSerializer implements ExtensionSerializer, ExtensionDeserializer, Serializable {
   public static final long serialVersionUID = 1;
 
-  public void marshall(Class parentType,
-                       QName elementType,
-                       ExtensibilityElement extension,
-                       PrintWriter pw,
-                       Definition def,
-                       ExtensionRegistry extReg)
-                         throws WSDLException
-  {
-    MIMEMultipartRelated mimeMultipartRelated =
-      (MIMEMultipartRelated)extension;
+  public void marshall(Class<?> parentType, QName elementType, ExtensibilityElement extension, PrintWriter pw, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    MIMEMultipartRelated mimeMultipartRelated = (MIMEMultipartRelated) extension;
 
-    if (mimeMultipartRelated != null)
-    {
-      String tagName =
-        DOMUtils.getQualifiedValue(MIMEConstants.NS_URI_MIME,
-                                   "multipartRelated",
-                                   def);
+    if (mimeMultipartRelated != null) {
+      String tagName = DOMUtils.getQualifiedValue(MIMEConstants.NS_URI_MIME, "multipartRelated", def);
 
-      if (parentType != null
-          && MIMEPart.class.isAssignableFrom(parentType))
-      {
+      if (parentType != null && MIMEPart.class.isAssignableFrom(parentType)) {
         pw.print("    ");
       }
 
@@ -51,21 +34,15 @@ public class MIMEMultipartRelatedSerializer implements ExtensionSerializer,
 
       Boolean required = mimeMultipartRelated.getRequired();
 
-      if (required != null)
-      {
-        DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED,
-                                         required.toString(),
-                                         def,
-                                         pw);
+      if (required != null) {
+        DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED, required.toString(), def, pw);
       }
 
       pw.println('>');
 
       printMIMEParts(mimeMultipartRelated.getMIMEParts(), pw, def, extReg);
 
-      if (parentType != null
-          && MIMEPart.class.isAssignableFrom(parentType))
-      {
+      if (parentType != null && MIMEPart.class.isAssignableFrom(parentType)) {
         pw.print("    ");
       }
 
@@ -73,147 +50,88 @@ public class MIMEMultipartRelatedSerializer implements ExtensionSerializer,
     }
   }
 
-  private void printMIMEParts(List mimeParts,
-                              PrintWriter pw,
-                              Definition def,
-                              ExtensionRegistry extReg)
-                                throws WSDLException
-  {
-    if (mimeParts != null)
-    {
-      String tagName =
-        DOMUtils.getQualifiedValue(MIMEConstants.NS_URI_MIME,
-                                   "part",
-                                   def);
-      Iterator mimePartIterator = mimeParts.iterator();
+  private void printMIMEParts(List<MIMEPart> mimeParts, PrintWriter pw, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    if (mimeParts == null || mimeParts.isEmpty()) {
+      return;
+    }
 
-      while (mimePartIterator.hasNext())
-      {
-        MIMEPart mimePart = (MIMEPart)mimePartIterator.next();
+    String tagName = DOMUtils.getQualifiedValue(MIMEConstants.NS_URI_MIME, "part", def);
+    Iterator<MIMEPart> mimePartIterator = mimeParts.iterator();
 
-        if (mimePart != null)
-        {
-          pw.print("          <" + tagName);
+    while (mimePartIterator.hasNext()) {
+      MIMEPart mimePart = mimePartIterator.next();
 
-          Boolean required = mimePart.getRequired();
+      if (mimePart != null) {
+        pw.print("          <" + tagName);
 
-          if (required != null)
-          {
-            DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED,
-                                             required.toString(),
-                                             def,
-                                             pw);
-          }
+        Boolean required = mimePart.getRequired();
 
-          pw.println('>');
-
-          List extensibilityElements = mimePart.getExtensibilityElements();
-
-          if (extensibilityElements != null)
-          {
-            Iterator extensibilityElementIterator =
-              extensibilityElements.iterator();
-
-            while (extensibilityElementIterator.hasNext())
-            {
-              ExtensibilityElement ext =
-                (ExtensibilityElement)extensibilityElementIterator.next();
-              QName elementType = ext.getElementType();
-              ExtensionSerializer extSer =
-                extReg.querySerializer(MIMEPart.class, elementType);
-
-              extSer.marshall(MIMEPart.class,
-                              elementType,
-                              ext,
-                              pw,
-                              def,
-                              extReg);
-            }
-          }
-
-          pw.println("          </" + tagName + '>');
+        if (required != null) {
+          DOMUtils.printQualifiedAttribute(Constants.Q_ATTR_REQUIRED, required.toString(), def, pw);
         }
+
+        pw.println('>');
+
+        List<ExtensibilityElement> extensibilityElements = mimePart.getExtensibilityElements();
+
+        if (extensibilityElements != null) {
+          Iterator<ExtensibilityElement> extensibilityElementIterator = extensibilityElements.iterator();
+
+          while (extensibilityElementIterator.hasNext()) {
+            ExtensibilityElement ext = extensibilityElementIterator.next();
+            QName elementType = ext.getElementType();
+            ExtensionSerializer extSer = extReg.querySerializer(MIMEPart.class, elementType);
+
+            extSer.marshall(MIMEPart.class, elementType, ext, pw, def, extReg);
+          }
+        }
+
+        pw.println("          </" + tagName + '>');
       }
     }
   }
 
-  public ExtensibilityElement unmarshall(Class parentType,
-                                         QName elementType,
-                                         Element el,
-                                         Definition def,
-                                         ExtensionRegistry extReg)
-                                           throws WSDLException
-	{
-    MIMEMultipartRelated mimeMultipartRelated =
-      (MIMEMultipartRelated)extReg.createExtension(parentType, elementType);
-    String requiredStr = DOMUtils.getAttributeNS(el,
-                                                 Constants.NS_URI_WSDL,
-                                                 Constants.ATTR_REQUIRED);
+  public ExtensibilityElement unmarshall(Class<?> parentType, QName elementType, Element el, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    MIMEMultipartRelated mimeMultipartRelated = (MIMEMultipartRelated) extReg.createExtension(parentType, elementType);
+    String requiredStr = DOMUtils.getAttributeNS(el, Constants.NS_URI_WSDL, Constants.ATTR_REQUIRED);
     Element tempEl = DOMUtils.getFirstChildElement(el);
 
-    while (tempEl != null)
-    {
-      if (QNameUtils.matches(MIMEConstants.Q_ELEM_MIME_PART, tempEl))
-      {
-        mimeMultipartRelated.addMIMEPart(
-          parseMIMEPart(MIMEMultipartRelated.class,
-                        MIMEConstants.Q_ELEM_MIME_PART,
-                        tempEl,
-                        def,
-                        extReg));
-      }
-      else
-      {
+    while (tempEl != null) {
+      if (QNameUtils.matches(MIMEConstants.Q_ELEM_MIME_PART, tempEl)) {
+        mimeMultipartRelated.addMIMEPart(parseMIMEPart(MIMEMultipartRelated.class, MIMEConstants.Q_ELEM_MIME_PART, tempEl, def, extReg));
+      } else {
         DOMUtils.throwWSDLException(tempEl);
       }
 
       tempEl = DOMUtils.getNextSiblingElement(tempEl);
     }
 
-    if (requiredStr != null)
-    {
-      mimeMultipartRelated.setRequired(new Boolean(requiredStr));
+    if (requiredStr != null) {
+      mimeMultipartRelated.setRequired(Boolean.valueOf(requiredStr));
     }
 
     return mimeMultipartRelated;
-	}
+  }
 
-  private MIMEPart parseMIMEPart(Class parentType,
-                                 QName elementType,
-                                 Element el,
-                                 Definition def,
-                                 ExtensionRegistry extReg)
-                                   throws WSDLException
-  {
-    MIMEPart mimePart = (MIMEPart)extReg.createExtension(parentType,
-                                                         elementType);
-    String requiredStr = DOMUtils.getAttributeNS(el,
-                                                 Constants.NS_URI_WSDL,
-                                                 Constants.ATTR_REQUIRED);
+  private MIMEPart parseMIMEPart(Class<?> parentType, QName elementType, Element el, Definition def, ExtensionRegistry extReg) throws WSDLException {
+    MIMEPart mimePart = (MIMEPart) extReg.createExtension(parentType, elementType);
+    String requiredStr = DOMUtils.getAttributeNS(el, Constants.NS_URI_WSDL, Constants.ATTR_REQUIRED);
 
-    if (requiredStr != null)
-    {
-      mimePart.setRequired(new Boolean(requiredStr));
+    if (requiredStr != null) {
+      mimePart.setRequired(Boolean.valueOf(requiredStr));
     }
 
     Element tempEl = DOMUtils.getFirstChildElement(el);
 
-    while (tempEl != null)
-    {
-      try
-      {
+    while (tempEl != null) {
+      try {
         QName tempElType = QNameUtils.newQName(tempEl);
-        ExtensionDeserializer extDS = extReg.queryDeserializer(MIMEPart.class,
-                                                               tempElType);
-        ExtensibilityElement ext =
-          extDS.unmarshall(MIMEPart.class, tempElType, tempEl, def, extReg);
+        ExtensionDeserializer extDS = extReg.queryDeserializer(MIMEPart.class, tempElType);
+        ExtensibilityElement ext = extDS.unmarshall(MIMEPart.class, tempElType, tempEl, def, extReg);
 
         mimePart.addExtensibilityElement(ext);
-      }
-      catch (WSDLException e)
-      {
-        if (e.getLocation() == null)
-        {
+      } catch (WSDLException e) {
+        if (e.getLocation() == null) {
           e.setLocation(XPathUtils.getXPathExprFromNode(tempEl));
         }
 
